apps/docs-loutik/showcase-loutik-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-loutik
  namespace: website
  labels:
    app.kubernetes.io/name: docs-loutik
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: docs-loutik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docs-loutik
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
      dnsPolicy: ClusterFirst
      containers:
        - name: docs-loutik
          image: "ghcr.io/loutik/website-docs:1.0.1"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 75m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
