apps/docs-loutik/docs-loutik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docs-loutik
  namespace: website
  labels:
    app.kubernetes.io/name: docs-loutik
spec:
  selector:
    app.kubernetes.io/name: docs-loutik
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
