apps/docs-loutik/showcase-loutik-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-loutik
  namespace: website
  labels:
    app.kubernetes.io/name: docs-loutik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`docs.loutik.fr`)
      kind: Rule
      services:
        - name: docs-loutik
          port: 80
